<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="164dp"
        android:layout_height="164dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-48dp"
        android:layout_marginEnd="-32dp"
        android:src="@drawable/top_r"
        android:contentDescription="@string/no_description" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        style="@style/TitleActivity"
        android:text="@string/title_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_name_ly"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/TilLogin"
            android:hint="Full Name"
            app:startIconDrawable="@drawable/ic_person">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_phone_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/TilLogin"
            android:hint="Phone"
            app:startIconDrawable="@drawable/ic_call">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="18"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/TilLoginPwd"
            android:hint="Password"
            app:startIconDrawable="@drawable/ic_lock">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_confirm_ly"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/TilLoginPwd"
            android:hint="Confirm Password"
            app:startIconDrawable="@drawable/ic_lock">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_confirm_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="48dp"
            app:backgroundTint="@color/orange_300"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="textEnd"
            android:text="@string/btn_login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/main_ready_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            android:text="@string/register_ask" />
        <TextView
            android:id="@+id/main_ready_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:textStyle="bold"
            android:textColor="@color/deepOrange_300"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            android:text="@string/sign_up_text" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>